--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,7 +9,9 @@
                 <content class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content">
                 {{- block "main" . }}{{- end }}
                 </content>
-                {{- partial "toc.html" . -}}
+                {{- if .Params.toc }}
+                    {{- partial "toc.html" . -}}
+                {{- end }}
             </div>
         </div>
         
