--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -28,8 +28,8 @@ $green:   #00bc8c !default;
 $teal:    #20c997 !default;
 $cyan:    #3498DB !default;
 
-// $primary:       $blue !default;
-$primary:       $cyan !default;
+$primary:       $blue !default;
+// $primary:       $cyan !default;
 $secondary:     $gray-700 !default;
 $success:       $green !default;
 $info:          $cyan !default;
